<resources>
    <string name="app_name">BackaRyan_CE02</string>
    <array name="form_choice">
        <item>Pilot</item>
        <item>Attendant</item>
        <item>Passenger</item>
    </array>
    <string name="refresh">refresh</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="destination">Destination</string>
    <string name="liscense_no">Liscence No.</string>
    <string name="employee_no">Employee No.</string>
    <string name="layover">Layover City</string>
    <string name="submit">Submit</string>
</resources>
